--- a/Backgroundgenerator.html
+++ b/Backgroundgenerator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Background generator</title>
+	<title>Background Generator</title>
 	<link rel="stylesheet" type="text/css" href="backgroundgenerator.css">
 </head>
 <body id="gradient">
